src/App.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;700&display=swap');

* {
  box-sizing: border-box;
}

html,
body,
#root {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  /* background-color: white; */
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  /* overflow: hidden; */
  color: #fff;
  font-family: 'Poppins', sans-serif;
  font-weight: 300;
  --font-size-h1:25px;
  --main-color:black;
  --purple:#6A2C70;
  --red:#B83B5E;
  --yellow:#F9ED69;
  --orange:#F08A5D;
}

em {
  font-style: normal;
}

a {
  text-decoration: none;
  color: inherit;
  font-size: inherit;    
  font-family: 'Poppins', sans-serif;
}

button:hover{
  cursor: pointer;
}

#root {
  overflow: auto;
}

body {
  overscroll-behavior: none;
  overflow: hidden;
}

.switch-dark-light{
  background-color: var(--main-color);
  border-radius: 10px;
  border: 1px solid #fff;
  padding: 5px;
  position: absolute;
  top: 5vh;
  right: 20vw;
  width: 70px;

}
.switch-dark-light path{
  fill: #fff
}

.scene{
	/* z-index:3; */
  background-color: white;
  color : var(--main-color);  ;
  /* background: -webkit-linear-gradient(to left, #485460, #0f0e17);   */
  width: 100%;
  height:100vh;
  display: block;
   
}

.dark-theme {
  background: var(--main-color);  
  color : white
}


/* //////////////////////////// */

.panel{
  display: flex;
  flex-direction: column;
  width: 100vw;
  min-height: 100vh;
  height: auto;
  padding-left: 1em;
  align-items: center;
  justify-content: center;
  font-size:clamp(0.7em, 3vh, 35px);
  font-weight:500 ;
  /* border: 1px solid green; */
}

.layout{
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 65%;
}

@media(max-width: 700px) {
  .panel{
    padding-left: 1em;
    align-items: flex-start;
  }
  .layout{
    width: 80%;
  }
  
}

.layout .contacts{
  display: flex;
  flex-direction: row;
  gap:10px;
  flex-wrap: wrap;
  /* border: 1px solid blue; */
}

.title{
  line-height: 0;
  overflow: hidden;
}
.title h2 em{
  font-size:clamp(1.5em, 7vh, 100px);
}

.title span{
  display: flex;
  max-width: 100%;
  gap: clamp(0.5em,2vw,20px);
}

.title h1{
  font-size:clamp(2em, 7vh, 100px);
  font-weight: 500;
  line-height: normal;
}

.title p{
  font-size:clamp(0.7em, 3vh, 35px);
  font-weight: 200;
  line-height: normal;
}

.title p b{
  font-weight: normal;
}

.buttons{
  display: flex;
  align-items: center;
  gap:10px;
  border: none;
  border-radius: 25px;
  background-color: white;
  border: 2px solid var(--red);
  color: var(--red);
  font-size:clamp(0.5em, 2.5vh, 25px);
  font-weight: 100;
  padding: 10px 15px;
}

.buttons:hover{
  background-color: var(--red);
  color: white;
}

.buttons-dark{
  display: flex;
  align-items: center;
  gap:10px;
  border: none;
  border-radius: 25px;
  background-color: var(--purple);
  color: white;
  font-size:clamp(0.5em, 2.5vh, 25px);
  font-weight: 100;
  padding: 10px 15px;
}

.buttons-dark:hover{
  background-color: var(--red);
}



.animate-translate { 
  animation-duration: 0.7s;
  animation-name: animate-translate;
  animation-timing-function: ease-in-out;
  animation-fill-mode: backwards;
  /* animation: animate-translate ease-in-out backwards ; */
}
.animate-opacity { 
  animation: animate-opacity 0.5s ease-in-out 0s backwards;
}
.delay-0_3{
  animation-delay: 0.3s;
}
.delay-0_5{
  animation-delay: 0.5s;
}
.delay-0_7{
  animation-delay: 0.7s;
}
.delay-1{
  animation-delay: 1s;
}
.delay-1_5{
  animation-delay: 1.5s;
}
/* .animate.pop {
  animation-name: animate-pop;
  animation-timing-function: cubic-bezier(.26,.53,.74,1.48);
} */

@keyframes animate-opacity{
  0% {
    opacity: 0;
    transform: scale(0.9,0.9);
  }
  100% {
    opacity: 1;
    transform: scale(1,1);
  }
}

@keyframes animate-translate {
  0% {
    opacity: 0;
    transform: translateY(-20%);
  }
  50% {
    opacity: 0.5;
    transform: translateY(5%);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.yellow {
  color:var(--yellow)
}

.job {
  color : var(--main-color) 
}
.job-dark {
  color : var(--orange) 
}

.gradient-text{
  /* Fallback: Set a background color. */
  background-color: var(--orange) ;
  
  /* Create the gradient. */
  background-image: linear-gradient(45deg, var(--red), var(--orange));
  
  /* Set the background size and repeat properties. */
  background-size: 100%;
  background-repeat: repeat;

  /* Use the text as a mask for the background. */
  /* This will show the gradient as a text color rather than element bg. */
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent; 
  -moz-background-clip: text;
  -moz-text-fill-color: transparent;
}


.gradient-text-dark {
  /* Fallback: Set a background color. */
  background-color: var(--orange) ;
  
  /* Create the gradient. */
  background-image: linear-gradient(45deg, var(--yellow), var(--red));
  
  /* Set the background size and repeat properties. */
  background-size: 100%;
  background-repeat: repeat;

  /* Use the text as a mask for the background. */
  /* This will show the gradient as a text color rather than element bg. */
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent; 
  -moz-background-clip: text;
  -moz-text-fill-color: transparent;
}



footer {
  clear: both;
  position: relative;
  height: 200px;
  margin-top: 300px;
  display: flex;
  align-items: flex-end;
  justify-content: center;
}

@media (max-width : 1300px) {
  footer {
    margin-top: 175px;
  }
}

@media (max-width : 700px) {
  footer {
    justify-content: flex-start;
    margin-left: 1em ;
    margin-top: 300px;
  }
}

